<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <item
            android:id="@+id/nav_crime_map"
            android:icon="@drawable/loc"
            android:title="@string/crime_map"
            app:showAsAction="always"
            android:iconTint="@color/white_grey"/>
        <item
            android:id="@+id/nav_report_crime"
            android:icon="@drawable/report"
            android:title="@string/report_crime"
            app:showAsAction="always"
            android:iconTint="@color/white_grey"/>
        <item
            android:id="@+id/nav_fir_token"
            android:icon="@drawable/token"
            android:title="@string/fir_token"
            app:showAsAction="always"
            android:iconTint="@color/white_grey"/>

        <item
            android:id="@+id/nav_geofence"
            android:icon="@drawable/ic_geo_fence"
            android:title="@string/geo_fence"
            app:showAsAction="always"
            android:iconTint="@color/white_grey"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings"
            app:showAsAction="always"
            android:iconTint="@color/white_grey"/>



</menu>
