<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Crime_current_2">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <View
            android:id="@+id/view_back"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/gradient" />

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@+id/view_back"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-200dp"
            android:src="@drawable/report_crime" />

        <TextView
            android:id="@+id/text_reporter_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_back"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/reporter_type"
            android:textAllCaps="false"
            android:textColor="@color/grey_dark"
            android:textSize="20sp"
            android:textStyle="normal" />

        <RadioGroup
            android:id="@+id/group_choices_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_reporter_type"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/victim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/victim" />

            <RadioButton
                android:id="@+id/spectator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/spectator" />

        </RadioGroup>


        <TextView
            android:id="@+id/text_security_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/group_choices_1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/security_availability"
            android:textAllCaps="false"
            android:textColor="@color/grey_dark"
            android:textSize="20sp"
            android:textStyle="normal" />

        <RadioGroup
            android:id="@+id/group_choices_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_security_available"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/none" />

            <RadioButton
                android:id="@+id/minimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minimal" />

            <RadioButton
                android:id="@+id/normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/normal" />

            <RadioButton
                android:id="@+id/excessive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/excessive" />

        </RadioGroup>


        <TextView
            android:id="@+id/text_crime_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/group_choices_2"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/crime_type"
            android:textAllCaps="false"
            android:textColor="@color/grey_dark"
            android:textSize="20sp"
            android:textStyle="normal" />

        <RadioGroup
            android:id="@+id/group_choices_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_crime_type"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/moles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="ButtonClick"
                android:text="@string/chain_snatching" />

            <RadioButton
                android:id="@+id/traff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="ButtonClick"
                android:text="@string/vandalism" />

            <RadioButton
                android:id="@+id/Rape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="ButtonClick"
                android:text="@string/Pick_pocketing" />

            <RadioButton
                android:id="@+id/kidnap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="ButtonClick"
                android:text="@string/eve_teasing" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/layout_proof"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/group_choices_3"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/proofs"
                android:textAllCaps="false"
                android:textColor="@color/grey_dark"
                android:textSize="20sp" />


            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:alignmentMode="alignBounds"
                android:columnCount="3"
                android:columnOrderPreserved="true"
                android:rowCount="4"
                android:useDefaultMargins="false">

                <ImageButton
                    android:id="@+id/pic"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:onClick="openCamera"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/circle"
                    android:src="@drawable/camera" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rambla"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/image"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <ImageButton
                    android:id="@+id/video"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/circle"
                    android:src="@drawable/video" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/rambla"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/video"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <ImageButton
                    android:id="@+id/mic"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/circle"
                    android:src="@drawable/mic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/rambla"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/voice"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </GridLayout>
        </LinearLayout>
    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/current_crim_next"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:drawableEnd="@drawable/next"
            android:text="@string/next"
            android:textAlignment="center"
            android:textSize="20sp" />

    </RelativeLayout>
