<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_up">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/eye" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/aadhar_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/aadhar_no"
            app:boxBackgroundColor="@color/design_default_color_on_primary"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeErrorColor="#DD1818"
            app:helperText="@string/required">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/aadhar_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aadhar_layout"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/pswrd"
            app:boxBackgroundColor="@color/design_default_color_on_primary"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeErrorColor="#DD1818"
            app:endIconMode="password_toggle"
            app:helperText="@string/required">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_layout"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/confirm_pswrd"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeErrorColor="#DD1818"
            app:endIconMode="password_toggle"
            app:helperText="@string/required">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirm_password_layout"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:drawableEnd="@drawable/next"
            android:padding="20dp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="30dp" />

        <LinearLayout
            android:id="@+id/linear_layout_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_btn"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <View
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/rambla"
                android:text="@string/or"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/grey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_layout_or"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signUp_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rambla"
                android:text="@string/text_sign_up"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/signIn_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rambla"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold"

                />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>