<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BroadcastMessage">

    <TextView

        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/brodcast_messages"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="25sp"
        android:padding="10dp"
        android:textAllCaps="true"
        android:background="@color/colorPrimary"
        android:textStyle="normal" />
    <TextView
        android:id="@+id/latest"

        android:layout_below="@id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latest_messages"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latest"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/broadcast"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/broadcast"
            android:background="@color/white"
            android:layout_weight="0"/>
        <TextView
            android:id="@+id/msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/there_is_a_fire_break_in_rajouri_garden_market"
            android:textStyle="normal"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"/>


</LinearLayout>


    </RelativeLayout>
